<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StepIn2IT</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="labeldebug">Debug</string>
    <string name="labelweather">Weather</string>
    <string name="checkinstep1">Checkin Step1</string>
    <string name="description">Click on the Android icon to open the Navigation Drawer.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="instructions">Checkin</string>
    <string name="hello">Add an image. Then drag it onto the grid.</string>

    <integer name="num_images">9</integer>
    <integer name="num_columns">3</integer>

    <string name="normal">Switch to normal mode</string>
    <string name="pie">Switch to pie mode</string>
    <string name="Fragment1">This is ActionBarSherlock Fragment 1</string>
    <string name="Fragment2">This is ActionBarSherlock Fragment 2</string>
    <string name="Fragment3">This is ActionBarSherlock Fragment 3</string>
    <string name="generic_welcome">Hi</string>
    <string name="checkinstep1_header_line1_text">Hi, George! Hope you have a great day.</string>
    <string name="checkinstep1_header_line2_text">How are you feeling today?</string>
    <string name="checkinstep1_header_line3_text">Your tempo Check-In can be updated any time during the day.</string>
    <string name="checkinstep2_header_line1_text">Hi George</string>
    <string name="checkinstep2_header_line2_text">How are your symptoms today?</string>
    <string name="checkinstep3_header_line1_text">How much have you smoked today?</string>
    <string name="checkinstep3_header_line2_text">How much have you smoked today?</string>
    <string name="checkin_header_standard_message">Your tempo check-in can be updated at any time during the day</string>
    <string name="checkinstep2_header_text">How are your symptoms today?</string>
    <string name="checkinstep2_header_text_2">Your tempo check-in can be updated at any time during the day</string>
    <string name="checkinstep2_header_button_text">SKIP THIS TIME</string>
    <string name="checkinstep3_header_text">How much have you smoked today?</string>
    <string name="checkinstep3_header_text_2">Your tempo check-in can be updated at any time during the day</string>
    <string name="checkinstep1_message_text"></string>
    <string name="checkinstep3_value">Value</string>
    <string name="checkinstep5_header_text">How many minutes of exercise have you done today?</string>
    <string name="checkinstep6_header_line1_text">Did you take your medication today?</string>
    <string name="checkinstep6_header_line2_text">Your tempo check-in can be updated at any time during the day</string>
    <string name="expandable_list_sample_action">Sample action</string>
    <string name="label_debug">Debug</string>
    <string name="label_profile_step1_dialog_title">tempo Activation Code</string>
    <string name="label_profile_step1_dialog_message">Please enter your activation code:</string>
    <string name="label_profile_step2_dialog_message_1">Welcome to tempo! We are excited to have you join us. First, we will need to learn a little about you.</string>
    <string name="label_profile_step2_dialog_message_2">Please enter the username you would like to use:</string>
    <string name="label_profile_step3_dialog_message_1">Thanks, George</string>
    <string name="label_profile_step3_dialog_message_2">Please accept the terms and conditions for using tempo</string>
    <string name="label_profile_step4_dialog_message_1">tempo Terms and Conditions</string>
    <string name="label_profile_step4_dialog_message_2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam cursus. Morbi ut mi. Nullam enim leo, egestas id, condimentum at, laoreet mattis, massa. Sed eleifend nonummy diam. Praesent mauris ante, elementum et, bibendum at, posuere sit amet, nibh. Duis tincidunt lectus quis dui viverra vestibulum. Suspendisse vulputate aliquam dui. Nulla elementum dui ut augue. Aliquam vehicula mi at mauris. Maecenas placerat, nisl at consequat rhoncus, sem nunc gravida justo, quis eleifend arcu velit quis lacus. Morbi magna magna, tincidunt a, mattis non, imperdiet vitae, tellus. Sed odio est, auctor ac, sollicitudin in, consequat vitae, orci. Fusce id felis. Vivamus sollicitudin metus eget eros.</string>
    <string name="label_continue">Continue</string>
    <string name="label_view_toc">View Terms and Conditions</string>
    <string name="label_decline">Decline</string>
    <string name="label_accept">Accept</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_submit">Submit</string>
    <string name="app_dialog_title">AppDialog</string>
    <string name="label_ok_text">Ok</string>
    <string name="label_cancel_text">Cancel</string>

</resources>