<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:launcher="http://schemas.android.com/apk/res/com.android.launcher"
    xmlns:app="http://schemas.android.com/apk/res/com.invivo.tempo"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/topContainer"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tempo_blue"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/headerwelcometext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/generic_welcome"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tempo_green"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/headertext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                android:gravity="center_horizontal"
                android:text="@string/checkinstep6_header_line1_text"
                android:textColor="@color/tempo_dark_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/button_tempo_skip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tempo_gray_50"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/headermessagetext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/checkin_header_standard_message"
                android:textColor="@color/tempo_gray"
                android:textSize="20sp"
                android:textStyle="normal" />
        </LinearLayout>
            <com.stepin2it.stepin2it.customviews.TriToggleButton
                android:id="@+id/antilockBrakesInoperableSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" >
            </com.stepin2it.stepin2it.customviews.TriToggleButton>
   
    </LinearLayout>

    <FrameLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/tempo_blue_80"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/button_tempo_continue" />
    </FrameLayout>

</RelativeLayout>