<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.invivo.tempo"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/holo_gray"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/headertext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/checkinstep1_header_line2_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/headertext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/checkinstep3_header_text_2"
            android:textSize="10sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/checkinstep2_header_button_text" />
    </LinearLayout>

    <com.stepin2it.stepin2it.customlayouts.SemiCircleLayout
        android:id="@+id/containerlayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <com.stepin2it.stepin2it.draggableviews.ImageCell
            android:id="@+id/face1view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/imageView4"
            android:layout_toLeftOf="@+id/imageView2"
            android:background="#FFFFFF"
            android:src="@drawable/face1x" />

        <com.stepin2it.stepin2it.draggableviews.ImageCell
            android:id="@+id/face2view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_above="@+id/imageView1"
            android:layout_marginBottom="36dp"
            android:layout_marginRight="38dp"
            android:layout_toLeftOf="@+id/imageView5"
            android:background="#FFFFFF"
            android:src="@drawable/face2x" />

        <com.stepin2it.stepin2it.draggableviews.ImageCell
            android:id="@+id/face3view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/imageView2"
            android:layout_marginLeft="38dp"
            android:layout_toRightOf="@+id/imageView5"
            android:background="#FFFFFF"
            android:src="@drawable/face3x" />

        <com.stepin2it.stepin2it.draggableviews.ImageCell
            android:id="@+id/face4view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_above="@+id/center"
            android:layout_marginBottom="25dp"
            android:layout_toRightOf="@+id/imageView3"
            android:background="#FFFFFF"
            android:src="@drawable/face4x" />

        <com.stepin2it.stepin2it.draggableviews.ImageCell
            android:id="@+id/face5view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_above="@+id/imageView3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="#FFFFFF"
            android:src="@drawable/face5x" />

        <com.stepin2it.stepin2it.draggableviews.ImageCell
            android:id="@+id/center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="142dp"
            android:layout_toLeftOf="@+id/imageView3"
            android:background="#FFFFFF"
            android:src="@drawable/select_zone" />
    </com.stepin2it.stepin2it.customlayouts.SemiCircleLayout>

</LinearLayout>