<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:launcher="http://schemas.android.com/apk/res/com.android.launcher"
                xmlns:app="http://schemas.android.com/apk/res/com.invivo.tempo"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

    <RelativeLayout
            android:id="@+id/topContainer"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

        <LinearLayout
                android:id="@+id/container1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tempo_blue"
                android:orientation="vertical" >

            <TextView
                    android:id="@+id/headerwelcometext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/checkinstep2_header_line1_text"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/container2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tempo_green"
                android:layout_below="@id/container1"
                android:orientation="horizontal" >

            <TextView
                    android:id="@+id/headertext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.60"
                    android:gravity="center_horizontal"
                    android:text="@string/checkinstep2_header_line2_text"
                    android:textColor="@color/tempo_dark_gray"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/buttonSkip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@drawable/button_tempo_skip" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/container3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tempo_gray_50"
                android:layout_below="@id/container2"
                android:orientation="vertical" >

            <TextView
                    android:id="@+id/headermessagetext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/checkin_header_standard_message"
                    android:textColor="@color/tempo_gray"
                    android:textSize="20sp"
                    android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/container4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:layout_below="@id/container3"
                android:orientation="vertical" >
            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/glass_0"
                    android:layout_marginTop="29dp"
                    android:layout_below="@+id/container4"
                    android:layout_centerHorizontal="true"/>

        </LinearLayout>


    </RelativeLayout>

    <FrameLayout
            android:id="@+id/bottomContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/tempo_blue_80"
            android:orientation="vertical" >

        <Button
                android:id="@+id/buttonContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/button_tempo_continue" />
    </FrameLayout>

</RelativeLayout>