<com.stepin2it.stepin2it.draggableviews.DragLayer xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:launcher="http://schemas.android.com/apk/res/com.android.launcher"
    xmlns:app="http://schemas.android.com/apk/res/com.invivo.tempo"
    android:id="@+id/drag_layer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tempo_blue"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/headerwelcometext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/checkinstep1_header_line1_text"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tempo_green"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/headertext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/tempo_gray"
                android:text="@string/checkinstep1_header_line2_text"
                android:textSize="20sp"
                android:textStyle="bold" />

           
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tempo_gray_50"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/headermessagetext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/checkinstep1_header_line3_text"
                android:textColor="@color/tempo_gray"
                android:textSize="20sp"
                android:textStyle="normal" />
        </LinearLayout>

        <com.stepin2it.stepin2it.customlayouts.SemiCircleLayout
            android:id="@+id/image_source_frame_outer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@+id/image_source_frame_1"
                android:layout_width="80dp"
                android:layout_height="80dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/image_source_frame2"
                android:layout_width="80dp"
                android:layout_height="80dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/image_source_frame3"
                android:layout_width="80dp"
                android:layout_height="80dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/image_source_frame4"
                android:layout_width="80dp"
                android:layout_height="80dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <!-- <FrameLayout -->
            <!-- android:id="@+id/image_source_frame5" -->
            <!-- android:layout_width="80dp" -->
            <!-- android:layout_height="80dp" > -->


            <!-- <ImageView -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="wrap_content" /> -->
            <!-- </FrameLayout> -->
        </com.stepin2it.stepin2it.customlayouts.SemiCircleLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/image_source_frame6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center" >

        <com.stepin2it.stepin2it.draggableviews.DeleteZone
            android:id="@+id/delete_zone_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/select_zone" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/tempo_blue_80"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/button_tempo_continue"
             />
    </LinearLayout>

</com.stepin2it.stepin2it.draggableviews.DragLayer>